@@ -500,3 +500,5 @@ N(OP_DzChooseZone),
 N(OP_BuffCreate),
 N(OP_GuildStatus),
 N(OP_BuffRemoveRequest),
+N(OP_CorpseDrag),
+N(OP_CorpseDrop),
