@@ -10,7 +10,6 @@
 
 OP_Unknown=0x0000
 OP_ExploreUnknown=0x0292		#used for unknown explorer
-
 #world packets
 OP_ApproveWorld=0x41b1			# ShowEQ 06/29/05
 OP_LogServer=0x4668			# EQEmu 06/29/05
@@ -221,6 +220,8 @@ OP_LFPCommand=0x35a6			# ShowEQ 06/29/05
 OP_RandomReply=0x6cd5			# ShowEQ 06/29/05
 OP_DenyResponse=0x7c66			# ShowEQ 06/29/05
 OP_ConsiderCorpse=0x673c		# ShowEQ 06/29/05
+OP_CorpseDrag=0x50c0			#
+OP_CorpseDrop=0x7c7c			#
 OP_ConfirmDelete=0x28f2			# ShowEQ 06/29/05
 OP_MobHealth=0x3d2d			# ShowEQ 06/29/05
 OP_SkillUpdate=0x6a93			# ShowEQ 06/29/05
