@@ -202,6 +202,8 @@ OP_SenseHeading=0x3887				# C
 OP_Action=0x2c27					# C
 OP_ConsiderCorpse=0x37a7			# C
 OP_HideCorpse=0x1842
+OP_CorpseDrag=0x5a6f				# C
+OP_CorpseDrop=0x5a01				# C
 OP_Bug=0x02b						# C
 OP_Feedback=0x0d1d					# C
 OP_Report=0x6884					# C
@@ -623,3 +625,13 @@ OP_RAWOutOfSession=0x0000			#
 # we need to document the differences between these packets to make identifying them easier
 OP_Some3ByteHPUpdate=0x0000			# initial HP update for mobs
 OP_InitialHPUpdate=0x0000			#
+
+
+
+# Mercenary Opcodes
+OP_MercenaryDataRequest=0x4717			#
+OP_MercenaryDataResponse=0x1715			#
+OP_MercenaryHire=0x0bfd				#
+OP_MercenaryAssign=0x6188			#
+OP_MercenaryTimer=0x116d			#
+OP_MercenaryUnknown1=0x28c7			#
