@@ -197,6 +197,8 @@ OP_FaceChange=0x482D			#Trevius 01/16/09
 OP_SenseHeading=0x1237			#Trevius 01/16/09
 OP_Action=0x5285    			#Trevius 01/16/09
 OP_ConsiderCorpse=0x4CBB		#Xinu 02/20/09
+OP_CorpseDrag=0x51e1			#
+OP_CorpseDrop=0x77a6			#
 OP_Bug=0x1CF0				#Trevius 01/16/09
 OP_Feedback=0x216C			#Trevius 01/16/09 - size: 1148	
 OP_Report=0x5BD9			#Trevius 01/16/09 - size: 729	
