@@ -229,6 +229,8 @@ OP_LFPCommand=0x6f82			# ShowEQ 10/27/05
 OP_RandomReply=0x6cd5			# ShowEQ 10/27/05
 OP_DenyResponse=0x7c66			# ShowEQ 10/27/05
 OP_ConsiderCorpse=0x773f			# ShowEQ 10/27/05
+OP_CorpseDrag=0x50c0			#
+OP_CorpseDrop=0x7c7c			#
 OP_ConfirmDelete=0x3838			# ShowEQ 10/27/05
 OP_MobHealth=0x0695			# ShowEQ 10/27/05
 OP_SkillUpdate=0x6a93			# ShowEQ 10/27/05
