@@ -200,6 +200,8 @@ OP_SenseHeading=0x1b8a				# C
 OP_Action=0x0f14					# C
 OP_ConsiderCorpse=0x0a18			# C
 OP_HideCorpse=0x2d08				# C 0x1842
+OP_CorpseDrag=0x3331				#
+OP_CorpseDrop=0x2e70				#
 OP_Bug=0x2369						# C
 OP_Feedback=0x7705					# C
 OP_Report=0x50d0					# C
