@@ -263,3 +263,5 @@
 	void Handle_OP_RemoveBlockedBuffs(const EQApplicationPacket *app);
 	void Handle_OP_ClearBlockedBuffs(const EQApplicationPacket *app);
 	void Handle_OP_BuffRemoveRequest(const EQApplicationPacket *app);
+	void Handle_OP_CorpseDrag(const EQApplicationPacket *app);
+	void Handle_OP_CorpseDrop(const EQApplicationPacket *app);
